# RChat

./: .dockerignore  .env.example  .env.local.example  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  next.config.js  package.json  spec.md  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/(main)/dms/: page.tsx
app/(main)/servers/: page.tsx
app/[[...slug]]/: app_shell.tsx  page.tsx
app/components/: HomeClient.tsx  admin_panel.tsx  avatar_picker.tsx  channel_sidebar.tsx  context_menu.tsx  markdown_message.tsx  member_sidebar.tsx  message_composer.tsx  message_pane.tsx  pwa_register.tsx  search_panel.tsx  server_dialogs.tsx  server_rail.tsx  server_settings.tsx  settings_menu.tsx  status_clock.tsx  thread_panel.tsx  user_avatar.tsx  voice_grid.tsx  word_grid.tsx
app/components/admin/: AdminPanel.tsx  BannedUserManagement.tsx  ServerManagement.tsx  UserManagement.tsx
app/components/auth/: LoginForm.tsx  RegisterForm.tsx
app/components/chat/: MessageInput.tsx  MessageList.tsx
app/components/dashboard/: Dashboard.tsx
app/lib/: api.ts  basePath.ts  notifications.tsx  p2p.ts  rtc.ts  storage.ts  store.ts  types.ts  utils.ts  vad.ts  websocket.ts  ws.ts
app/login/: page.tsx
app/register/: page.tsx
app/types/: auth.ts
app/wasm/: page.tsx
assets/: build_logo.py
jfiles/: common.just
jfiles/src/: build.just  justfile  run.just  test.just
migrations/: 20250112000001_initial_schema.sql
public/: sw.js
src/: config.rs  db.rs  lib.rs  state.rs  ws.rs
src/api/: admin.rs  auth.rs  channels.rs  create.rs  direct_messages.rs  dms.rs  embeds.rs  env.rs  files.rs  greet.rs  hello.rs  media.rs  messages.rs  mod.rs  openapi.rs  public.rs  search.rs  servers.rs  unified_messages.rs  users.rs
src/data/: wordlist.txt
src/database/: mod.rs
src/middleware/: auth.rs  guest.rs  rate_limit.rs
src/models/: channel.rs  direct_message.rs  file.rs  login_attempt.rs  message.rs  mod.rs  server.rs  server_member.rs  user.rs  user_session.rs
src/server/: mod.rs  route_builder.rs
src/services/: auth.rs  avatar.rs  channel.rs  chat.rs  default_server.rs  direct_message.rs  file_storage.rs  file_validation.rs  init.rs  messaging.rs  mod.rs  profanity.rs  server.rs  user_moderation.rs  word_sequence.rs
src/tasks/: cleanup.rs
src/utils/: crypto.rs  error.rs  helpers.rs  jwt.rs  mod.rs  permissions.rs  validation.rs
src/websocket/: connection.rs  events.rs  handlers.rs  mod.rs
wasm/src/: lib.rs
(+20 files in other folders)
