[package]
name = "rust-next"
version = "0.1.0"
edition = "2024"
description = "Rust + Next.js full-stack template with WASM support"

[workspace]
members = ["wasm"]
default-members = ["."]

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
config = "0.15"
clap = { version = "4", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower_governor = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
