[package]
name = "rust-next"
version = "0.1.0"
edition = "2024"
description = "Rust + Next.js full-stack template with WASM support"

[workspace]
members = ["wasm"]
default-members = ["."]

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
config = "0.15"
clap = { version = "4", features = ["derive"] }
tower_governor = "0.8"
sqlx = { version = "0.8", features = [
  "any",
  "sqlite",
  "postgres",
  "runtime-tokio",
] }
rustrict = "0.7.38"
sha2 = "0.11.0"
hex = "0.4.3"
rand = "0.10.2"
rand_chacha = "0.10.0"
memorable-wordlist = "0.1.7"
argon2 = { version = "0.5", features = ["std"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
tl = "0.7.8"
url = "2.5.8"
rust-s3 = { version = "0.37.2", default-features = false, features = [
  "tokio-rustls-tls",
  "fail-on-err",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
